--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/example
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mvc.hiddenmethod.filter.enabled=true
